fix issue with vertical position of access arrangements by applying vertical baseline align on all td elements

--- a/admin/assets/stylesheets/elements/_access-arrangements.scss
+++ b/admin/assets/stylesheets/elements/_access-arrangements.scss
@@ -19,16 +19,15 @@
   margin-top: pem(40px);
 }
 
+#submitted-pupil-access-arrangements td {
+  vertical-align: baseline;
+}
+
 .access-arrangements-pupil {
   text-decoration: underline;
-  vertical-align: baseline;
 }
 
 .access-arrangements-list {
   width: pem(160px);
-}
-
-.access-arrangements-action {
-  vertical-align: baseline;
 }
 
